cmake_minimum_required(VERSION 3.27)
project(Clion)

set(CMAKE_CXX_STANDARD 23)

add_executable(Clion
#        ContainsDuplicate/ContainsDuplicate.cpp
#        VaildAnagram/ValidAnagram-worstcase.cpp
        # VaildAnagram/Vaildanagrambestcase-bestcase.cpp
       # TwoSum/Twosum-worstcase.cpp
       #  TwoSum/Twosum-bestcase.cpp
       # TwoSum/Twosum-optimzed.cpp

        GroupAnagram/groupworst.cpp
        #GroupAnagram/groupanamBest.cpp
       # Test/testasw.cpp

)
